fixed clock not having 0 before numbers smaller than 10, added search bar

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 </a>
             </div>
         </div>
+        <form action="" class="googleContainer">
+            <label for="google">Ou quer pesquisar algo?</label>
+            <input type="text" name="google" id="google">
+        </form>
     </section>
 </body>
 </html>
